syntax = "proto3";
package api;
option go_package = "api/protos";

message CreateGameInputs {
  uint32 user1id=1;
}
message CreateGameOutputs {
  uint64 gameid=1;
}
 
service StrategyGame {
  rpc CreateGame (CreateGameInputs) returns (CreateGameOutputs) {}
}
//protoc --go_out=. --go-grpc_out=. -I=./api/ ./api/api.proto
